<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="1188px"
    android:layout_height="528px"
    android:background="@drawable/exit_dialog_bg">

    <TextView
        android:id="@+id/exit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100px"
        android:textSize="60px"
        android:text="@string/exit_screen"
        android:textColor="@color/setting_title_color"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/exit_tmessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37px"
        android:textSize="48px"
        android:text="@string/exit_message"
        android:textColor="@color/button_normal_color"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit_title"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="6px"
        android:layout_marginTop="69px"
        android:background="#dce3eb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit_tmessage"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="168px"
        android:orientation="horizontal"
        android:layout_marginRight="5px"
        android:layout_marginLeft="5px"
        android:layout_marginBottom="5px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:gravity="center"
            android:textColor="@color/button_normal_color"
            android:textSize="42px"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#dce3eb"/>


        <TextView
            android:id="@+id/exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/exit"
            android:gravity="center"
            android:textColor="@color/button_normal_color"
            android:textSize="42px"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>