<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="829px"
    android:layout_height="968px"
    android:background="@drawable/setting_bg">

    <TextView
        android:id="@+id/setting_title"
        android:layout_width="match_parent"
        android:layout_height="173px"
        android:textSize="60px"
        android:text="@string/setting_title"
        android:textColor="@color/setting_title_color"
        android:gravity="center_vertical"
        android:layout_marginLeft="72px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="6px"
        android:background="#dce3eb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_title"/>


    <ImageView
        android:id="@+id/imv_exit"
        android:layout_width="50px"
        android:layout_height="50px"
        android:layout_marginTop="60px"
        android:layout_marginRight="40px"
        android:src="@drawable/invalid_name"
        android:contentDescription="@string/exit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mic_icon"
        android:layout_width="108px"
        android:layout_height="108px"
        android:layout_marginLeft="134px"
        android:layout_marginTop="57px"
        android:contentDescription="@string/mic_option"
        android:background="@drawable/ic_setting_microphone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"/>

    <TextView
        android:id="@+id/mic_title"
        android:layout_width="match_parent"
        android:layout_height="108px"
        android:textSize="48px"
        android:text="@string/mic_option"
        android:textColor="@color/setting_title_color"
        android:gravity="center_vertical"
        android:layout_marginLeft="266px"
        app:layout_constraintTop_toTopOf ="@id/mic_icon"
        app:layout_constraintTop_toBottomOf="@+id/line"/>
    
    <LinearLayout
        android:id="@+id/linear_mic"
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:orientation="horizontal"
        android:layout_marginLeft="134px"
        android:layout_marginRight="135px"
        android:layout_marginTop="36px"
        android:background="@drawable/mic_spinner_bg"
        app:layout_constraintTop_toBottomOf="@+id/mic_title">

        <TextView
            android:id="@+id/mic_text_id"
            android:layout_width="400px"
            android:layout_height="match_parent"
            android:text="@string/system_auto"
            android:textSize="36px"
            android:layout_marginLeft="42px"
            android:textColor="@color/setting_title_color"
            android:gravity="center_vertical"/>
        
        <ImageView
            android:id="@+id/mic_popup"
            android:layout_width="72px"
            android:layout_height="72px"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="24px"
            android:importantForAccessibility="no"
            android:background="@drawable/ic_arrow_down"
            android:gravity="center"/>

    </LinearLayout>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="6px"
        android:background="#dce3eb"
        android:layout_marginTop="69px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_mic"/>

    <ImageView
        android:id="@+id/resolution_icon"
        android:layout_width="108px"
        android:layout_height="108px"
        android:layout_marginLeft="134px"
        android:layout_marginTop="57px"
        android:contentDescription="@string/Resolution"
        android:background="@drawable/ic_setting_resolution"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1"/>

    <TextView
        android:id="@+id/resolution_title"
        android:layout_width="match_parent"
        android:layout_height="108px"
        android:textSize="48px"
        android:text="@string/Resolution"
        android:textColor="@color/setting_title_color"
        android:gravity="center_vertical"
        android:layout_marginLeft="266px"
        app:layout_constraintTop_toTopOf ="@id/resolution_icon"
        app:layout_constraintTop_toBottomOf="@+id/line1"/>

    <LinearLayout
        android:id="@+id/linear_resolution"
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:orientation="horizontal"
        android:layout_marginLeft="134px"
        android:layout_marginRight="135px"
        android:layout_marginTop="36px"
        android:background="@drawable/mic_spinner_bg"
        app:layout_constraintTop_toBottomOf="@+id/resolution_title">

        <TextView
            android:id="@+id/resolution_text"
            android:layout_width="400px"
            android:layout_height="match_parent"
            android:text="@string/two_definition"
            android:textSize="36px"
            android:layout_marginLeft="42px"
            android:textColor="@color/setting_title_color"
            android:gravity="center_vertical"/>

        <ImageView
            android:id="@+id/resolution_popup"
            android:layout_width="72px"
            android:layout_height="72px"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="24px"
            android:importantForAccessibility="no"
            android:background="@drawable/ic_arrow_down"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>