<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="560px"
    android:layout_height="wrap_content"
    android:layout_marginTop="20px"
    android:background="@drawable/mic_spinner_bg">
    
    <TextView
        android:id="@+id/imv_system_audio"
        android:layout_width="match_parent"
        android:layout_height="112px"
        android:gravity="center_vertical"
        android:text="@string/system_auto"
        android:textSize="36px"
        android:layout_marginLeft="42px"
        android:textColor="@color/mic_text_colot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <ImageView
        android:id="@+id/system_auto_check"
        android:layout_width="50px"
        android:layout_height="50px"
        android:layout_marginTop="30px"
        android:layout_marginRight="20px"
        android:layout_marginLeft="20px"
        android:src="@drawable/ic_check"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#dce3eb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imv_system_audio"/>

    <TextView
        android:id="@+id/imv_mic_phone"
        android:layout_width="match_parent"
        android:layout_height="112px"
        android:gravity="center_vertical"
        android:text="@string/built_mic"
        android:textSize="36px"
        android:layout_marginLeft="42px"
        android:textColor="@color/mic_text_colot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"/>

    <ImageView
        android:id="@+id/mic_phone_check"
        android:layout_width="50px"
        android:layout_height="50px"
        android:layout_marginTop="30px"
        android:layout_marginRight="20px"
        android:layout_marginLeft="20px"
        android:src="@drawable/ic_check"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"/>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#dce3eb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imv_mic_phone"/>

    <TextView
        android:id="@+id/mic_and_system"
        android:layout_width="match_parent"
        android:layout_height="112px"
        android:gravity="center_vertical"
        android:text="@string/micAndSystem"
        android:textSize="36px"
        android:layout_marginLeft="42px"
        android:textColor="@color/mic_text_colot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1"/>

    <ImageView
        android:id="@+id/mic_and_system_check"
        android:layout_width="50px"
        android:layout_height="50px"
        android:layout_marginTop="30px"
        android:layout_marginRight="20px"
        android:layout_marginLeft="20px"
        android:visibility="gone"
        android:src="@drawable/ic_check"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1"/>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#dce3eb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mic_and_system"/>

    <TextView
        android:id="@+id/mute"
        android:layout_width="match_parent"
        android:layout_height="112px"
        android:gravity="center_vertical"
        android:text="@string/mute"
        android:textSize="36px"
        android:layout_marginLeft="42px"
        android:textColor="@color/mic_text_colot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2"/>

    <ImageView
        android:id="@+id/mute_check"
        android:layout_width="50px"
        android:layout_height="50px"
        android:layout_marginTop="30px"
        android:layout_marginRight="20px"
        android:layout_marginLeft="20px"
        android:src="@drawable/ic_check"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2"/>

</androidx.constraintlayout.widget.ConstraintLayout>