<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="560px"
    android:layout_height="wrap_content"
    android:layout_marginTop="10px"
    android:background="@drawable/mic_spinner_bg">

    <TextView
        android:id="@+id/quality_3840"
        android:layout_width="match_parent"
        android:layout_height="112px"
        android:gravity="center_vertical"
        android:text="@string/four_definition"
        android:textSize="36px"
        android:layout_marginLeft="42px"
        android:textColor="@color/mic_text_colot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/three_check"
        android:layout_width="50px"
        android:layout_height="50px"
        android:layout_marginTop="30px"
        android:layout_marginRight="20px"
        android:layout_marginLeft="20px"
        android:src="@drawable/ic_check"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#dce3eb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quality_3840"/>

    <TextView
        android:id="@+id/quality_1920"
        android:layout_width="match_parent"
        android:layout_height="112px"
        android:gravity="center_vertical"
        android:text="@string/two_definition"
        android:textSize="36px"
        android:layout_marginLeft="42px"
        android:textColor="@color/mic_text_colot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"/>

    <ImageView
        android:id="@+id/one_check"
        android:layout_width="50px"
        android:layout_height="50px"
        android:layout_marginTop="30px"
        android:layout_marginRight="20px"
        android:layout_marginLeft="20px"
        android:src="@drawable/ic_check"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"/>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#dce3eb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quality_1920"/>

    <TextView
        android:id="@+id/quality_1280"
        android:layout_width="match_parent"
        android:layout_height="112px"
        android:gravity="center_vertical"
        android:text="@string/live_definition"
        android:textSize="36px"
        android:layout_marginLeft="42px"
        android:textColor="@color/mic_text_colot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1"/>

    <ImageView
        android:id="@+id/two_check"
        android:layout_width="50px"
        android:layout_height="50px"
        android:layout_marginTop="30px"
        android:layout_marginRight="20px"
        android:layout_marginLeft="20px"
        android:visibility="gone"
        android:src="@drawable/ic_check"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1"/>

<!--    <View-->
<!--        android:id="@+id/line2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="2px"-->
<!--        android:background="#dce3eb"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/quality_1280"/>-->

<!--    <TextView-->
<!--        android:id="@+id/quality_960"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="112px"-->
<!--        android:gravity="center_vertical"-->
<!--        android:text="@string/high_definition"-->
<!--        android:textSize="36px"-->
<!--        android:layout_marginLeft="42px"-->
<!--        android:textColor="@color/mic_text_colot"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/line2"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>